# casquette

./: Makefile  pyproject.toml
casquette/: config.py  scheduler.py
casquette/app/routers/: camera.py  sessions.py  sync.py  system.py
casquette/backend/: base.py  rpi.py
casquette/hardware/: bmi088.py  camera.py
docs/: bimanual_fusion.md
scripts/: check_hardware.py
